<resources>
    <string name="app_name">MobileCloset</string>
    <string name="enter_button">決定</string>
    <string name="cancel_button">キャンセル</string>
    <string name="name">名前</string>
    <string name="category">カテゴリー</string>
    <string name="color">色</string>
    <string name="price">値段</string>
    <string name="brand">ブランド</string>
    <string name="tops">トップス</string>
    <string name="bottoms">ボトムス</string>
    <string name="dress">ワンピース・セットアップ</string>
    <string name="jacket">ジャケット</string>
    <string name="inner">インナー</string>
    <string name="shoes">靴</string>
    <string name="bag">バッグ</string>
    <string name="accessory">小物・アクセサリー</string>
</resources>