<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/name_text"
        android:gravity="center"
        android:text="新規作成"
        android:textSize="15dp"></TextView>

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="15dp"
        app:layout_constraintTop_toTopOf="@id/name"
        app:layout_constraintEnd_toStartOf="@+id/name"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>

    <EditText
        android:id="@+id/name"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textSize="18dp"
        android:background="@drawable/underline_style"
        android:gravity="center"
        android:inputType="text"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintBottom_toTopOf="@+id/category"
        app:layout_constraintEnd_toEndOf="parent">
    </EditText>

    <TextView
        android:id="@+id/category_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/category"
        android:text="@string/category"
        android:textSize="15dp">
    </TextView>

    <Spinner
        android:id="@+id/category"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/underline_style"
        android:spinnerMode="dropdown"
        android:gravity="center"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintBottom_toTopOf="@+id/color"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintEnd_toEndOf="parent">
    </Spinner>

    <TextView
        android:id="@+id/color_text"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/color"
        android:textSize="15dp"
        app:layout_constraintTop_toTopOf="@id/color"
        app:layout_constraintEnd_toStartOf="@+id/color"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>

    <com.mozu_k.mobilecloset.MultiRowsRadioGroup
        android:id="@+id/color"
        android:orientation="vertical"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@+id/category"
        app:layout_constraintBottom_toTopOf="@id/price"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:id="@+id/red"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:button="@null"
                android:layout_marginEnd="10dp"
                android:onClick="onRadioButtonClicked"
                android:background="@drawable/circle_style_red"/>
            <RadioButton
                android:id="@+id/pink"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:button="@null"
                android:layout_marginEnd="10dp"
                android:onClick="onRadioButtonClicked"
                android:background="@drawable/circle_style_pink"/>
            <RadioButton
                android:id="@+id/orange"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:button="@null"
                android:layout_marginEnd="10dp"
                android:onClick="onRadioButtonClicked"
                android:background="@drawable/circle_style_orange"/>
            <RadioButton
                android:id="@+id/yellow"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:button="@null"
                android:layout_marginEnd="10dp"
                android:onClick="onRadioButtonClicked"
                android:background="@drawable/circle_style_yellow"/>
            <RadioButton
                android:id="@+id/green"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:button="@null"
                android:layout_marginEnd="10dp"
                android:onClick="onRadioButtonClicked"
                android:background="@drawable/circle_style_green"/>
            <RadioButton
                android:id="@+id/blue"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:button="@null"
                android:onClick="onRadioButtonClicked"
                android:background="@drawable/circle_style_blue"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:id="@+id/purple"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:button="@null"
                android:layout_marginEnd="10dp"
                android:onClick="onRadioButtonClicked"
                android:background="@drawable/circle_style_purple"/>
            <RadioButton
                android:id="@+id/brown"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:button="@null"
                android:layout_marginEnd="10dp"
                android:onClick="onRadioButtonClicked"
                android:background="@drawable/circle_style_brown"/>
            <RadioButton
                android:id="@+id/beige"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:button="@null"
                android:layout_marginEnd="10dp"
                android:onClick="onRadioButtonClicked"
                android:background="@drawable/circle_style_beige"/>
            <RadioButton
                android:id="@+id/gray"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:button="@null"
                android:layout_marginEnd="10dp"
                android:onClick="onRadioButtonClicked"
                android:background="@drawable/circle_style_gray"/>
            <RadioButton
                android:id="@+id/white"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:button="@null"
                android:layout_marginEnd="10dp"
                android:onClick="onRadioButtonClicked"
                android:background="@drawable/circle_style_white"/>
            <RadioButton
                android:id="@+id/black"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:button="@null"
                android:layout_marginEnd="10dp"
                android:onClick="onRadioButtonClicked"
                android:background="@drawable/circle_style_black"/>
            <RadioButton
                android:id="@+id/colorful"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:button="@null"
                android:onClick="onRadioButtonClicked"
                android:background="@drawable/circle_style_colorful"/>

        </LinearLayout>

    </com.mozu_k.mobilecloset.MultiRowsRadioGroup>

    <TextView
        android:id="@+id/price_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/price"
        android:textSize="15dp"
        app:layout_constraintTop_toTopOf="@id/price"
        app:layout_constraintEnd_toStartOf="@+id/price"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>

    <EditText
        android:id="@+id/price"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textSize="18dp"
        android:background="@drawable/underline_style"
        android:gravity="center"
        android:inputType="number"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@+id/color"
        app:layout_constraintBottom_toTopOf="@id/brand"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintEnd_toEndOf="parent">
    </EditText>

    <TextView
        android:id="@+id/brand_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/brand"
        android:textSize="15dp"
        app:layout_constraintTop_toTopOf="@id/brand"
        app:layout_constraintEnd_toStartOf="@+id/brand"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>

    <EditText
        android:id="@+id/brand"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textSize="18dp"
        android:background="@drawable/underline_style"
        android:gravity="center"
        android:inputType="text"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@+id/price"
        app:layout_constraintBottom_toTopOf="@id/enter"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintEnd_toEndOf="parent">
    </EditText>

    <Button
        android:id="@+id/enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@+id/brand"
        app:layout_constraintBottom_toTopOf="@+id/cancel"
        android:text="@string/enter_button"
        android:textSize="15dp">
    </Button>

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@+id/enter"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/cancel_button"
        android:textSize="15dp">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>